--- a/_main.scss
+++ b/_main.scss
@@ -12,6 +12,8 @@
   a {
     text-decoration: none;
     text-transform: capitalize;
+    font-size: 1rem;
+    font-weight: 300;
     color: $color-spotify-cookies;
   }
 }
