--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,7 @@
 }
 
 body {
+  margin: 0;
   background-color: rgb(163, 163, 163);
 }
 
